# Litea

./: .gitignore  README.md
backend/: .env.example  init_db.py  manage_db.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  logging_config.py  main.py
backend/app/api/routes/: __init__.py  analytics.py  auth.py  config.py  documents.py  sources.py  tasks.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/db/repositories/: __init__.py  documents.py  tasks.py
backend/app/schemas/: __init__.py  document.py  task.py
backend/app/services/: __init__.py  scheduler.py
backend/app/services/ai/: crew_manager.py  filtering_agent.py  keyword_extraction_service.py  provider_registry.py  summarization_agent.py
backend/app/services/mcp/: __init__.py  base.py  email_tool.py  feishu_tool.py
backend/app/services/notifications/: base.py  email_channel.py  email_templates.py  registry.py
backend/app/services/retrieval/: arxiv_source.py  base.py  registry.py
backend/app/services/tasks/: __init__.py  scheduler.py  task_runner.py
backend/app/services/zotero/: __init__.py  client.py
backend/app/utils/: pagination.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: analytics.ts  client.ts  documents.ts  index.ts  sources.ts  tasks.ts
frontend/src/assets/: theme.css
frontend/src/components/: ErrorAlert.vue  LoadingSpinner.vue  Modal.vue  Pagination.vue
shared/config/: constants.json
(+22 files in other folders)
